# presguel

./: .gitignore  Cargo.toml  README.md  lefthook.yml
crates/presguel-core/: Cargo.toml
crates/presguel-core/src/: config.rs  engine.rs  expr.rs  jamo.rs  lib.rs  ngs_seq.rs  unit.rs
crates/presguel-core/tests/: oracle.rs  schema.rs
crates/presguel-ibus/: Cargo.toml
crates/presguel-ibus/data/: ibus-setup-presguel.desktop  presguel-setup.py
crates/presguel-ibus/examples/: drive.rs
crates/presguel-ibus/src/: addr.rs  engine.rs  factory.rs  ibus_text.rs  main.rs
data/: presguel.xml
research/: 00-environment.md  01-nalgaeset-format.md  07-ibus-engine-xkb-pairing.md
schema/: README.md  nalgaeset-no-namespace.xsd
scripts/: install.sh  presguel-apply-layout
